# playlist-sync

./: Cargo.toml  README.md
config/: spotify.toml
src/: config.rs  lib.rs  provider.rs  track.rs
src/apps/cli/: Cargo.toml
src/apps/local-music-parser/: Cargo.toml
src/apps/m3u8-writer/: Cargo.toml
src/apps/spotify-parser/: Cargo.toml
src/cli/: main.rs
src/crates/common/src/: lib.rs
src/crates/common/tests/: lib.rs
src/crates/local-music-library-parser/: Cargo.toml
src/crates/local-music-library-parser/src/: lib.rs
src/crates/spotify-playlist-parser/: Cargo.toml
src/crates/spotify-playlist-parser/src/: lib.rs
src/local_music_library_parser/: metadata_parser.rs  mod.rs
src/spotify_playlist_parser/: auth.rs  config.rs  mod.rs  parser.rs
tests/: lib.rs
tests/fixtures/: tracks_different.csv  tracks_equal.csv
