[package]
name = "playlist-sync"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "playlist-sync"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
dirs = "6.0.0"
futures = "0.3.31"
rspotify = { version = "*", default-features = true }
serde = "1.0.227"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.7"
url = "2.5.7"
